css/structure.css
.master-container {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    height: auto;
    box-sizing: border-box;
    padding: 1%;
}

.header-bar {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    height: auto;
    margin-bottom: 1rem;
}

.logo {
    width: 40%;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    padding-bottom: 1rem;
}

.logo-icon {
    max-width: 6.25rem;
    max-height: 6.25rem;
    width: auto;
    height: auto;
}

.logo-text {
    margin-left: 1%;
    height: auto;
    width: auto;
}

.nav-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    height: auto;
    width: 50%;
    align-items: center;
}

.link-buttons {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    margin-right: 1%;
    line-height: 400%;
    height: auto;
    width: 25%;
    text-align: center;
}

.spotify-icon,
.wikipedia-icon {
    max-width: 2rem;
    max-height: 2rem;
    width: auto;
    height: auto;
    margin: 0.5rem;
}

.geborenam-page {
    margin-left: 1%;
}

.introduction-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    height: auto;
    width: 60%;
    padding: 2.5rem;
    margin-bottom: 2rem;
}

.introduction-image {
    max-height: 19rem;
    width: auto;
    margin-right: 1.5rem;
    margin-bottom: 1.5rem;
    float: left;
}

.introduction-text {
    height: auto;
}

.main-container {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    height: auto;
}

.main-text {
    margin: 0.3125rem;
    width: 55%;
    height: auto;
}

.aside {
    margin: 0.3125rem;
    margin-left: 0;
    width: 30%;
    height: auto;
}

.footer-container {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    height: auto;
    width: 100%;
    line-height: 5rem;
    padding: 1rem;
    margin-top: 0.625rem;
}

